@@ -10,7 +10,7 @@
 # *** NOT inherently secure. If a user can create an executable that
 # *** is setgid a group that they are infrequently given membership
 # *** of, they can basically obtain group membership any time they
-# *** like. Example: games are alowed between the hours of 6pm and 6am
+# *** like. Example: games are allowed between the hours of 6pm and 6am
 # *** user joe logs in at 7pm writes a small C-program toplay.c that
 # *** invokes their favorite shell, compiles it and does
 # *** "chgrp games toplay; chmod g+s toplay". They are basically able
